Alter Mon Locked handing to reduce requirements per item, using an overarching version instead;;Resolve issue with Togepi on warps not accounting for Phone or having gotten the egg from the aide;;Resolve issue with Mahogany Shop not accounting for Clair defeated spawning the shop (warps);;Tidy up Gear requirements into seperate location.;;Add Fly before Mon Locked Checks modifier for warps style.

--- a/Map Data/BlackthornGym.yml
+++ b/Map Data/BlackthornGym.yml
@@ -139,6 +139,7 @@ Location:
                         LocationReqs: Blackthorn Gym 1F Middle
                         FlagsSet:
                             - Clair Defeated
+                            - Mahogany Shop Open
                         ReachableReqs:
                         Code:
                         Text:
