--- a/Map Data/MahoganyTown.yml
+++ b/Map Data/MahoganyTown.yml
@@ -16,6 +16,7 @@ Location:
         HintName: Mahogany
         WarpReqs: Mahogany
         Sublocations:
+
     -
         Name: Mahogany Mart
         FileName: MahoganyTown.asm
@@ -34,162 +35,170 @@ Location:
         WarpReqs: Rocket Base Entrance
         Sublocations:
             -
-                Name: Mahogany Mart Rage Candy Bar
+                Name: Mahogany Rocket Standard Mart
                 FileName: MartMahogany2
-                Type: Shop
+                Type: Map
                 HasPKMN: No
                 WildTableList:
                 LocationReqs: Mahogany Mart
                 FlagReqs:
                     - Shopsanity
-                    - Beat Team Rocket
+                    - Mahogany Shop Open
                 ItemReqs:
                 FlagsSet:
                 ReachableReqs:
                 Code:
                 Text:
                 TrainerList:
-                NormalItem: RAGECANDYBAR
+                Sublocations:
+                -
+                    Name: Mahogany Mart Rage Candy Bar
+                    FileName: MartMahogany2
+                    Type: Shop
+                    HasPKMN: No
+                    WildTableList:
+                    LocationReqs: Mahogany Mart
+                    FlagReqs:
+                        - Shopsanity
+                    ItemReqs:
+                    FlagsSet:
+                    ReachableReqs:
+                    Code:
+                    Text:
+                    TrainerList:
+                    NormalItem: RAGECANDYBAR
+                -
+                    Name: Mahogany Mart Great Ball
+                    FileName: MartMahogany2
+                    Type: Shop
+                    HasPKMN: No
+                    WildTableList:
+                    LocationReqs: Mahogany Mart
+                    FlagReqs:
+                        - Shopsanity
+                    ItemReqs:
+                    FlagsSet:
+                    ReachableReqs:
+                    Code:
+                    Text:
+                    TrainerList:
+                    NormalItem: GREAT_BALL
+                -
+                    Name: Mahogany Mart Super Potion
+                    FileName: MartMahogany2
+                    Type: Shop
+                    HasPKMN: No
+                    WildTableList:
+                    LocationReqs: Mahogany Mart
+                    FlagReqs:
+                        - Shopsanity
+                    ItemReqs:
+                    FlagsSet:
+                    ReachableReqs:
+                    Code:
+                    Text:
+                    TrainerList:
+                    NormalItem: SUPER_POTION
+                -
+                    Name: Mahogany Mart Hyper Potion
+                    FileName: MartMahogany2
+                    Type: Shop
+                    HasPKMN: No
+                    WildTableList:
+                    LocationReqs: Mahogany Mart
+                    FlagReqs:
+                        - Shopsanity
+                    ItemReqs:
+                    FlagsSet:
+                    ReachableReqs:
+                    Code:
+                    Text:
+                    TrainerList:
+                    NormalItem: HYPER_POTION
+                -
+                    Name: Mahogany Mart Antidote
+                    FileName: MartMahogany2
+                    Type: Shop
+                    HasPKMN: No
+                    WildTableList:
+                    LocationReqs: Mahogany Mart
+                    FlagReqs:
+                        - Shopsanity
+                    ItemReqs:
+                    FlagsSet:
+                    ReachableReqs:
+                    Code:
+                    Text:
+                    TrainerList:
+                    NormalItem: ANTIDOTE
+                -
+                    Name: Mahogany Mart Parlyz Heal
+                    FileName: MartMahogany2
+                    Type: Shop
+                    HasPKMN: No
+                    WildTableList:
+                    LocationReqs: Mahogany Mart
+                    FlagReqs:
+                        - Shopsanity
+                    ItemReqs:
+                    FlagsSet:
+                    ReachableReqs:
+                    Code:
+                    Text:
+                    TrainerList:
+                    NormalItem: PARLYZ_HEAL
+                -
+                    Name: Mahogany Mart Super Repel
+                    FileName: MartMahogany2
+                    Type: Shop
+                    HasPKMN: No
+                    WildTableList:
+                    LocationReqs: Mahogany Mart
+                    FlagReqs:
+                        - Shopsanity
+                    ItemReqs:
+                    FlagsSet:
+                    ReachableReqs:
+                    Code:
+                    Text:
+                    TrainerList:
+                    NormalItem: SUPER_REPEL
+                -
+                    Name: Mahogany Mart Revive
+                    FileName: MartMahogany2
+                    Type: Shop
+                    HasPKMN: No
+                    WildTableList:
+                    LocationReqs: Mahogany Mart
+                    FlagReqs:
+                        - Shopsanity
+                    ItemReqs:
+                    FlagsSet:
+                    ReachableReqs:
+                    Code:
+                    Text:
+                    TrainerList:
+                    NormalItem: REVIVE
+                -
+                    Name: Mahogany Mart Flower Mail
+                    FileName: MartMahogany2
+                    Type: Shop
+                    HasPKMN: No
+                    WildTableList:
+                    LocationReqs: Mahogany Mart
+                    FlagReqs:
+                        - Shopsanity
+                    ItemReqs:
+                    FlagsSet:
+                    ReachableReqs:
+                    Code:
+                    Text:
+                    TrainerList:
+                    NormalItem: FLOWER_MAIL
             -
-                Name: Mahogany Mart Great Ball
+                Name: Mahogany Rocket Mart
                 FileName: MartMahogany2
-                Type: Shop
-                HasPKMN: No
-                WildTableList:
-                LocationReqs: Mahogany Mart
-                FlagReqs:
-                    - Shopsanity
-                    - Beat Team Rocket
-                ItemReqs:
-                FlagsSet:
-                ReachableReqs:
-                Code:
-                Text:
-                TrainerList:
-                NormalItem: GREAT_BALL
-            -
-                Name: Mahogany Mart Super Potion
-                FileName: MartMahogany2
-                Type: Shop
-                HasPKMN: No
-                WildTableList:
-                LocationReqs: Mahogany Mart
-                FlagReqs:
-                    - Shopsanity
-                    - Beat Team Rocket
-                ItemReqs:
-                FlagsSet:
-                ReachableReqs:
-                Code:
-                Text:
-                TrainerList:
-                NormalItem: SUPER_POTION
-            -
-                Name: Mahogany Mart Hyper Potion
-                FileName: MartMahogany2
-                Type: Shop
-                HasPKMN: No
-                WildTableList:
-                LocationReqs: Mahogany Mart
-                FlagReqs:
-                    - Shopsanity
-                    - Beat Team Rocket
-                ItemReqs:
-                FlagsSet:
-                ReachableReqs:
-                Code:
-                Text:
-                TrainerList:
-                NormalItem: HYPER_POTION
-            -
-                Name: Mahogany Mart Antidote
-                FileName: MartMahogany2
-                Type: Shop
-                HasPKMN: No
-                WildTableList:
-                LocationReqs: Mahogany Mart
-                FlagReqs:
-                    - Shopsanity
-                    - Beat Team Rocket
-                ItemReqs:
-                FlagsSet:
-                ReachableReqs:
-                Code:
-                Text:
-                TrainerList:
-                NormalItem: ANTIDOTE
-            -
-                Name: Mahogany Mart Parlyz Heal
-                FileName: MartMahogany2
-                Type: Shop
-                HasPKMN: No
-                WildTableList:
-                LocationReqs: Mahogany Mart
-                FlagReqs:
-                    - Shopsanity
-                    - Beat Team Rocket
-                ItemReqs:
-                FlagsSet:
-                ReachableReqs:
-                Code:
-                Text:
-                TrainerList:
-                NormalItem: PARLYZ_HEAL
-            -
-                Name: Mahogany Mart Super Repel
-                FileName: MartMahogany2
-                Type: Shop
-                HasPKMN: No
-                WildTableList:
-                LocationReqs: Mahogany Mart
-                FlagReqs:
-                    - Shopsanity
-                    - Beat Team Rocket
-                ItemReqs:
-                FlagsSet:
-                ReachableReqs:
-                Code:
-                Text:
-                TrainerList:
-                NormalItem: SUPER_REPEL
-            -
-                Name: Mahogany Mart Revive
-                FileName: MartMahogany2
-                Type: Shop
-                HasPKMN: No
-                WildTableList:
-                LocationReqs: Mahogany Mart
-                FlagReqs:
-                    - Shopsanity
-                    - Beat Team Rocket
-                ItemReqs:
-                FlagsSet:
-                ReachableReqs:
-                Code:
-                Text:
-                TrainerList:
-                NormalItem: REVIVE
-            -
-                Name: Mahogany Mart Flower Mail
-                FileName: MartMahogany2
-                Type: Shop
-                HasPKMN: No
-                WildTableList:
-                LocationReqs: Mahogany Mart
-                FlagReqs:
-                    - Shopsanity
-                    - Beat Team Rocket
-                ItemReqs:
-                FlagsSet:
-                ReachableReqs:
-                Code:
-                Text:
-                TrainerList:
-                NormalItem: FLOWER_MAIL
-            -
-                Name: Mahogany Mart Rocket Tiny Mushroom
-                FileName: MartMahogany1
-                Type: Shop
+                Type: Map
                 HasPKMN: No
                 WildTableList:
                 LocationReqs: Mahogany Mart
@@ -201,52 +210,68 @@ Location:
                 Code:
                 Text:
                 TrainerList:
-                NormalItem: TINYMUSHROOM
-            -
-                Name: Mahogany Mart Rocket Slowpoketail
-                FileName: MartMahogany1
-                Type: Shop
-                HasPKMN: No
-                WildTableList:
-                LocationReqs: Mahogany Mart
-                FlagReqs:
-                    - Shopsanity
-                ItemReqs:
-                FlagsSet:
-                ReachableReqs:
-                Code:
-                Text:
-                TrainerList:
-                NormalItem: SLOWPOKETAIL
-            -
-                Name: Mahogany Mart Rocket Poke Ball
-                FileName: MartMahogany1
-                Type: Shop
-                HasPKMN: No
-                WildTableList:
-                LocationReqs: Mahogany Mart
-                FlagReqs:
-                    - Shopsanity
-                ItemReqs:
-                FlagsSet:
-                ReachableReqs:
-                Code:
-                Text:
-                TrainerList:
-                NormalItem: POKE_BALL
-            -
-                Name: Mahogany Mart Rocket Potion
-                FileName: MartMahogany1
-                Type: Shop
-                HasPKMN: No
-                WildTableList:
-                LocationReqs: Mahogany Mart
-                FlagReqs:
-                    - Shopsanity
-                ItemReqs:
-                FlagsSet:
-                ReachableReqs:
-                Code:
-                Text:
-                TrainerList:
-                NormalItem: POTION
+                Sublocations:
+                -
+                    Name: Mahogany Mart Rocket Tiny Mushroom
+                    FileName: MartMahogany1
+                    Type: Shop
+                    HasPKMN: No
+                    WildTableList:
+                    LocationReqs: Mahogany Mart
+                    FlagReqs:
+                        - Shopsanity
+                    ItemReqs:
+                    FlagsSet:
+                    ReachableReqs:
+                    Code:
+                    Text:
+                    TrainerList:
+                    NormalItem: TINYMUSHROOM
+                -
+                    Name: Mahogany Mart Rocket Slowpoketail
+                    FileName: MartMahogany1
+                    Type: Shop
+                    HasPKMN: No
+                    WildTableList:
+                    LocationReqs: Mahogany Mart
+                    FlagReqs:
+                        - Shopsanity
+                    ItemReqs:
+                    FlagsSet:
+                    ReachableReqs:
+                    Code:
+                    Text:
+                    TrainerList:
+                    NormalItem: SLOWPOKETAIL
+                -
+                    Name: Mahogany Mart Rocket Poke Ball
+                    FileName: MartMahogany1
+                    Type: Shop
+                    HasPKMN: No
+                    WildTableList:
+                    LocationReqs: Mahogany Mart
+                    FlagReqs:
+                        - Shopsanity
+                    ItemReqs:
+                    FlagsSet:
+                    ReachableReqs:
+                    Code:
+                    Text:
+                    TrainerList:
+                    NormalItem: POKE_BALL
+                -
+                    Name: Mahogany Mart Rocket Potion
+                    FileName: MartMahogany1
+                    Type: Shop
+                    HasPKMN: No
+                    WildTableList:
+                    LocationReqs: Mahogany Mart
+                    FlagReqs:
+                        - Shopsanity
+                    ItemReqs:
+                    FlagsSet:
+                    ReachableReqs:
+                    Code:
+                    Text:
+                    TrainerList:
+                    NormalItem: POTION
