--- a/Map Data/Route11.yml
+++ b/Map Data/Route11.yml
@@ -7,10 +7,8 @@ Location:
         WildTableList: 
         LocationReqs: 
             - Vermilion City Entrance
-            - Expansion Card Gift Access
-            - Radio Card Quiz Access
-            - Pokegear Gift Access
         FlagReqs:
+            - Poke Flute
         ItemReqs:
         FlagsSet:
             - Snorlax Woken
